# parachute-computer

./: .gitignore  AGENTS.md  AGENT_NATIVE_REVIEW.md  CLAUDE.md  Makefile  README.md  TESTING_SUPERVISOR.md  UI_TESTING.md  build_deck.py  build_deck_screenshot.py  build_exec_summary_pdf.py  install.sh  nvc-executive-summary-draft.md  nvc-pitch-deck.pptx  package-lock.json  parachute.sh  pyproject.toml  requirements-dev.txt  requirements.txt  server.js
computer/: .env.example  .gitignore  AGENTS.md  API-COMPARISON.md  CLAUDE.md  DESIGN.md  ISSUE_269_BRAINSTORM.md  Makefile  README.md  REFACTOR-PLAN.md  claude.md  demo.sh  install.sh  mcp-para-generate.js  mcp-vault-search.js  package-lock.json  package.json  parachute.sh  parachute_server.spec  pyproject.toml  requirements.txt  server.js
computer/deploy/: restart.sh  xyz.openparachute.agent.plist
computer/docs/: AGENTS_CONTEXT_ARCHITECTURE.md  PARACHUTE_DAILY_ROADMAP.md
computer/docs/brainstorms/: 2026-02-08-agent-skill-mcp-plugin-loading-brainstorm.md  2026-02-08-bot-management-brainstorm.md  2026-02-08-cli-experience-brainstorm.md  2026-02-08-sandbox-persistence-brainstorm.md  2026-02-09-dead-code-sweep-brainstorm.md  2026-02-09-multi-track-improvements-brainstorm.md  2026-02-09-openclaw-bot-patterns-brainstorm.md  2026-02-09-trust-model-simplification-brainstorm.md  2026-02-09-workspace-integration-and-bugs-brainstorm.md  2026-02-11-intelligent-cost-optimization-brainstorm.md  2026-02-11-multi-agent-workspace-teams-brainstorm.md
computer/docs/plans/: 2026-02-08-feat-bot-management-overhaul-plan.md  2026-02-08-feat-cli-daemon-management-plan.md  2026-02-08-feat-workspace-model-plugin-loading-chat-ui-plan.md  2026-02-08-fix-sandbox-session-persistence-plan.md  2026-02-09-agent-skill-mcp-ux-plan.md  2026-02-09-feat-bot-ux-improvements-plan.md  2026-02-09-fix-desktop-new-chat-telegram-history-workspace-integration-sandbox-cwd-plan.md  2026-02-09-refactor-dead-code-sweep-terminology-cleanup-plan.md  2026-02-09-refactor-trust-model-simplification-plan.md  2026-02-09-ui-polish-overflow-audit-plan.md  2026-02-09-workspace-trust-docker-model-plan.md
computer/etc/: README.md
computer/etc/homebrew/: parachute.rb
computer/etc/macos-launchd/: com.parachute.server.plist
computer/lib/: context-loader.js  default-prompt.js  errors.js  generate-config.js  index-schema.sql  mcp-loader.js  module-indexer.js  ollama-service.js  orchestrator.js  para-id-service.js  queue.js  session-manager-v2.js  skills-loader.js  usage-tracker.js  vault-search.js
computer/lib/generate-backends/: nano-banana.js
computer/lib/mcp-servers/: parachute-mcp.js
computer/modules/brain/: README.md  __init__.py  brain_service.py  entities.py  graphiti_service.py  knowledge_graph.py  ladybug_service.py  manifest.yaml  mcp_tools.py  (+4 more)
computer/node/: .gitignore
computer/obsidian-plugin/: package-lock.json  package.json
computer/parachute/: __init__.py  __main__.py  cli.py  config.py  curator_mcp_server.py  daemon.py  daily_curator_mcp_server.py  docker_runtime.py  mcp_server.py  models_api.py  server.py  supervisor.py  supervisor_main.py
computer/public/: index.html
computer/sample-vault/: .mcp.json  AGENTS.md  CLAUDE.md  README.md
computer/scripts/: migrate-vault.js  migrate_assets_to_date_folders.py  migrate_context_to_graph.py  migrate_vault.py  test_sdk_jsonl_synthesis.py
computer/supervisor/: __init__.py
computer/test/: e2e-session-tests.js
computer/tests/: __init__.py  conftest.py
(+1332 files in other folders)
