[project]
name = "parachute-computer"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.1",
    "claude-agent-sdk>=0.1.29",
    "sse-starlette>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "python-frontmatter>=1.0.0",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
parachute = "parachute.cli:main"
parachute-supervisor = "parachute.supervisor_main:main"

[tool.setuptools.packages.find]
include = ["parachute*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
